--- a/src/utils/email/verify.handlebars
+++ b/src/utils/email/verify.handlebars
@@ -18,13 +18,15 @@
   <body>
     <p class="para" >Hi {{email}},<br>
     <p class="para">You registered an account on [customer portal], before being able to use your account you need to verify that this is your email address by clicking here: 
-      <span id="link">Link</span>
+      <div id="link">Link</div>
     </p>
     <p>Problems? Please contact support@travip.com</p>
+    <p>Kind Regards,</p>
   <script>
     const link = document.getElementById("link")
     link.onclick = async()=>{
-      await fetch({{url}}, {method: "post", body: JSON.stringify({{body}})})
+      const result = await fetch({{url}}, {method: "post", body: JSON.stringify({{body}})})
+      console.log(result)
       window.location.href= "http://www.google.com"
     }
   </script>
