--- a/src/utils/email/verify.handlebars
+++ b/src/utils/email/verify.handlebars
@@ -2,7 +2,7 @@
   <head>
     <style>
       * { font-size: 16px; } .para { color: #455056; font-size: 16px; } #link { appearance: none; background-color:
-      transparent; border: none; color: #27af66; font-size: 16px; font-weight: bold; padding: 0; }
+      transparent; border: none; color: #27af66; font-size: 16px; font-weight: bold; padding: 0; cursor: pointer; }
     </style>
   </head>
   <body>
